Fixed header text align issue

--- a/src/component/Header/header.module.css
+++ b/src/component/Header/header.module.css
@@ -29,5 +29,6 @@
   .section {
     flex-direction: row;
     justify-content: flex-start;
+    text-align: left;
   }
 }
